Fix adaptive layout bug

--- a/Fall2024/CS202/cardboard/css/cardboard.css
+++ b/Fall2024/CS202/cardboard/css/cardboard.css
@@ -51,7 +51,7 @@ section.card-container {
     background-repeat: repeat;
     display: grid;
     grid-template-rows: repeat(auto-fit, 1fr);
-    grid-template-columns: repeat(auto-fit, minmax(16%, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(16%, 1fr));
     align-items: stretch;
     column-gap: 1em;
     row-gap: 1em;
